<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EjecutarReportes">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ejecutarR"
            android:layout_width="121dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/boton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/ejecutar"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/firmarRep"
            android:layout_width="121dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/ejecutarR"
            android:background="@drawable/boton"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="true"
            android:text="@string/firmar"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ejecutarR" />

        <Button
            android:id="@+id/SalirR"
            android:layout_width="121dp"
            android:layout_height="58dp"
            android:layout_below="@+id/ejecutarR"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/boton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/salir"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ejecutarR"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>