<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoBlanco"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activitys.Orden"

    tools:showIn="@layout/app_bar_orden">

    <ListView
        android:id="@+id/listorden"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/colorPrimary"
        android:dividerHeight="10dp"
        android:elevation="80dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/orden"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ordsearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ordsearch"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/borden"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/borden"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/ic_search_category_default"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/ordsearch"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/contsearch"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/borden"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bcontrato"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/ic_search_category_default"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/contsearch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/n_Contrato"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bcontrato"
        app:layout_constraintStart_toEndOf="@+id/borden"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/contrato"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listorden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordsearch" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/n_Orden"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listorden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contsearch" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/estatus"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listorden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contsearch" />



</android.support.constraint.ConstraintLayout>