<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activitys.Reportes"
    tools:showIn="@layout/app_bar_reportes">

    <ListView
        android:id="@+id/listreporte"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:dividerHeight="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="@dimen/chico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reporte"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reportesearch"
        app:layout_constraintStart_toStartOf="@+id/reportesearch"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reportesearch"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:inputType="number"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <Button
        android:id="@+id/breporte"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/busqueda"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/reportesearch"
        app:layout_constraintStart_toEndOf="@+id/reportesearch"
        app:layout_constraintTop_toTopOf="@+id/reportesearch" />


    <EditText
        android:id="@+id/contsearch"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:inputType="text|number"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/breporte"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <Button
        android:id="@+id/bcontrato"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/busqueda"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/contsearch"
        app:layout_constraintStart_toEndOf="@+id/contsearch"
        app:layout_constraintTop_toTopOf="@+id/contsearch" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/n_Contrato"
        android:textSize="@dimen/mediano"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="16dp"
        android:text="@string/contrato"
        android:textSize="@dimen/mediano"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listreporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contsearch" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/n_Reporte"
        android:textSize="@dimen/mediano"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listreporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/reportesearch" />


    <TextView
        android:id="@+id/textView45"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/estatus"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listreporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contsearch" />

</android.support.constraint.ConstraintLayout>